töihin pitäis mennä

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
   <title>BLIP</title>
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://blip.nauruvers.io">
+  <meta property="og:url" content="https://Napuu.github.io/junction2k21/">
   <meta property="og:site_name" content="Blip" />
   <meta property="og:title" content="Blip — Base station power saving">
   <meta property="og:description"
@@ -33,7 +33,7 @@
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:url" content="https://blip.nauruvers.io">
+  <meta property="twitter:url" content="https://Napuu.github.io/junction2k21/">
   <meta property="twitter:title" content="Blip — Base station power saving">
   <meta property="twitter:description"
     content="An interactive application for visualizing the potential energy savings from optimizing the cellular base station energy usage.">
